--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import 'scss/main.scss';
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+// .mat-drawer.mat-drawer-side { transition: 0.2s all }
+
+.main{min-height: calc(100vh - 80px); background: #ececec; padding-bottom: 100px;}
