--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,4 +7,4 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 // .mat-drawer.mat-drawer-side { transition: 0.2s all }
 
-.main{min-height: calc(100vh - 80px); background: #ececec; padding-bottom: 100px;}
+.main{min-height: calc(100vh - 80px); background: #ececec; padding-top: 30px; padding-bottom: 100px;}
