--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -30,7 +30,7 @@
                   </div>
                  </mat-card>
                </div>
-              <div *ngIf="!formBuilt" class="col">
+              <div *ngIf="!formBuilt" class="col col-4">
 
                 <div class="drop-container"
                 style="padding: 10px;" >
