--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -7,6 +7,16 @@
                <div *ngIf="!formBuilt" class="col-2">
                 <mat-card>
                 <div class="example-container">
+<table>
+  <tr>
+    <td> <a href="http://google.com">google.com</a>  </td>
+    <td> google page link</td>
+  </tr>
+  <tr>
+    <td>  <a href="http://amazon.com">amazon.com</a></td>
+    <td> amazon page link</td>
+  </tr>
+</table>
                     <h2>To do</h2>
                 
                     <div
